hphp/hack/test/typecheck/const_type_violated_constraint.php.exp
File "const_type_violated_constraint.php", line 4, characters 9-29:
Some type constraint(s) here are violated (Typing[4323])
  File "hackarray.hhi", line 16, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 16, characters 34-41:
  Expected `arraykey`
  File "const_type_violated_constraint.php", line 4, characters 14-20:
  But got `?string`
